--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 				<a href="#" data-bind="click: $root.nextQ" class="button red"><span data-bind="text: content"></span></a>
 			</div>
 		</div>
-		
+	</div>
+	<div class="apply box-shadow" data-bind="visible: apply">
+		<a href="#" class="button red"><span>Apply Now</span></a>
 	</div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
