--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 		<div data-bind="visible: $parent.currentQ() == index(), attr: { id: index }" class="box-shadow question">
 			<p data-bind="text: content"></p>
 			<div data-bind="foreach: answers">
-				<a href="#" data-bind="click: $root.nextQ" class="button red"><span data-bind="text: content"></span></a>
+				<a href="#" data-bind="click: $root.nextQ, attr: { href: $parent.id }" class="button red"><span data-bind="text: content"></span></a>
 			</div>
 		</div>
 	</div>
 	<div class="apply box-shadow" data-bind="visible: apply">
-		<a href="#" class="button red"><span>Apply Now</span></a>
+		<p>You might be entitled to some support with finding somewhere to live:</p>
+		<a href="http://ascvohoaw2k3/scripts/cgiip.exe/WService=OETEST/ibsxmlpr.p?docid=app_entry" class="button red"><span>Apply Now</span></a>
 	</div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
