--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/ss-standard.css">
 </head>
 <body>
-	<div data-bind="foreach: questions">
-		<div data-bind="visible: $parent.currentQ() == index(), attr: { id: index }" class="box-shadow question">
-			<p data-bind="text: content"></p>
-			<div data-bind="foreach: answers">
+	<div data-bind="foreach: questions" class="box-shadow questions">
+		<div data-bind="visible: $parent.currentQ() == index(), attr: { id: index }" class="question">
+			<p data-bind="html: content"></p>
+			<div data-bind="foreach: answers" class="answers">
 				<a href="#" data-bind="click: $root.nextQ, attr: { href: $parent.id }" class="button red"><span data-bind="text: content"></span></a>
 			</div>
 		</div>
@@ -27,7 +26,6 @@
 	</div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-<script type='text/javascript' src="js/ss-standard.js"></script>
 <script type='text/javascript' src='js/knockout-2.2.0.js'></script>
 <script type='text/javascript' src="js/site.js"></script>
 </body>
