--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div data-bind="foreach: questions" class="box-shadow questions">
+	<div data-bind="foreach: questions" class="questions">
 		<div data-bind="visible: $parent.currentQ() == index(), attr: { id: index }" class="question">
 			<p data-bind="html: content"></p>
 			<div data-bind="foreach: answers" class="answers">
@@ -20,10 +20,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="apply box-shadow" data-bind="visible: apply">
+	<div class="apply" data-bind="visible: apply">
 		<p>You might be entitled to some support with finding somewhere to live:</p>
 		<a href="http://ascvohoaw2k3/scripts/cgiip.exe/WService=OETEST/ibsxmlpr.p?docid=app_entry" class="button red"><span>Apply Now</span></a>
 	</div>
+	
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
 <script type='text/javascript' src='js/knockout-2.2.0.js'></script>
