--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div data-bind="visible: $parent.currentQ() == index(), attr: { id: 'q' + index() }" class="question">
 			<p data-bind="html: content"></p>
 			<div data-bind="foreach: answers" class="answers">
-				<a href="#" data-bind="click: $root.nextQ, attr: { href: $parent.id }" class="button red"><span data-bind="text: content"></span></a>
+				<a href="#" data-bind="click: $root.nextQ, attr: { href: $parent.id }" class="button red"><span data-bind="html: content"></span></a>
 			</div>
 		</div>
 	</div>
