--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 			<p data-bind="html: content"></p>
 			<div data-bind="foreach: answers" class="answers">
 				<div class="answer">
-					<a href="#" data-bind="click: $root.nextQ, attr: { href: $parent.id }" class="button red"><span data-bind="html: content"></span></a>
+					<a href="#" data-bind="click: $root.nextQ, attr: { href: $parent.id }" class="button red"><span data-bind="html: content"></span>
+					</a>
+					<div class="tooltip" >
+						<span>i</span>
+					</div>
+					
 				</div>
 			</div>
 		</div>
