--- a/index.html
+++ b/index.html
@@ -12,35 +12,40 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div data-bind="foreach: questions" class="questions">
-		<div data-bind="visible: $parent.currentQ() == index(), attr: { id: 'q' + index() }" class="question">
-			<p data-bind="html: content"></p>
-			<div data-bind="foreach: answers" class="answers">
-				<div class="answer">
-					<a href="#" data-bind="click: $root.nextQ, attr: { href: $parent.id }" class="button red"><span data-bind="html: content"></span>
-					</a>
-					<div class="tooltip" data-bind="visible: tooltip, click: toggleTooltip">
-						<span>i</span>
+	<div class="loading" data-bind="visible: !ready()">
+		<p>Loading...</p>
+		<img src="images/loading.gif" alt="Loading."/>
+	</div>
+	<div class="hidden" id="container">
+		<div data-bind="foreach: questions" class="questions">
+			<div data-bind="visible: $parent.currentQ() == index(), attr: { id: 'q' + index() }" class="question">
+				<p data-bind="html: content"></p>
+				<div data-bind="foreach: answers" class="answers">
+					<div class="answer">
+						<a href="#" data-bind="click: $root.nextQ, attr: { href: $parent.id }" class="button red"><span data-bind="html: content"></span>
+						</a>
+						<div class="tooltip" data-bind="visible: tooltip, click: toggleTooltip">
+							<span>i</span>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div data-bind="foreach: answers">
-				<div class="tooltip-wrapper" data-bind="visible: tooltipOn">
-					<div class="tooltip-content box-shadow">
-						<div data-bind="html: tooltip"></div>
-						<a href="#" class="red button" data-bind="click: toggleTooltip">Close</a>
+				<div data-bind="foreach: answers">
+					<div class="tooltip-wrapper" data-bind="visible: tooltipOn">
+						<div class="tooltip-content box-shadow">
+							<div data-bind="html: tooltip"></div>
+							<a href="#" class="red button" data-bind="click: toggleTooltip">Close</a>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<div class="apply" data-bind="visible: apply()">
+			<p>You might be entitled to some support with finding somewhere to live:</p>
+			<a href="http://ascvohoaw2k3/scripts/cgiip.exe/WService=OETEST/ibsxmlpr.p?docid=app_entry" class="button red">
+				<span>Apply Now</span>
+			</a>
+		</div>
 	</div>
-	<div class="apply" data-bind="visible: apply">
-		<p>You might be entitled to some support with finding somewhere to live:</p>
-		<a href="http://ascvohoaw2k3/scripts/cgiip.exe/WService=OETEST/ibsxmlpr.p?docid=app_entry" class="button red">
-			<span>Apply Now</span>
-		</a>
-	</div>
-	
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
 <script type='text/javascript' src='js/knockout-2.2.0.js'></script>
