--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 		<div class="apply" data-bind="visible: apply()">
 			<p>You might be entitled to some support with finding somewhere to live:</p>
-			<a href="http://ascvohoaw2k3/scripts/cgiip.exe/WService=OETEST/ibsxmlpr.p?docid=app_entry" class="button red">
+			<a href="http://www.northampton.gov.uk/info/200183/housing_allocations/1784/completing_a_housing_application" class="button red">
 				<span>Apply Now</span>
 			</a>
 		</div>
